--- a/Edu_Home/appsettings.json
+++ b/Edu_Home/appsettings.json
@@ -1,5 +1,10 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLEXPRESS;Database=EduDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "AdminUser": {
+    "Username": "admin",
+    "Password": "12345@",
+    "Email": "admin@gmail.com"
   }
 }
